# prem_project

./: README.md  package-lock.json  package.json  pyproject.toml
docs/: understat_endpoint_inventory.md
prem_project/: hello.py  pyproject.toml
prem_project/src/app/utils/: utils.py
scripts/: render_echarts.mjs  render_svg_to_png.mjs
src/app/: __init__.py  analytics_presets.py  cli.py  coach_eras.py  endpoint_manifest.py  endpoint_runner.py  question_answering.py  visualization_renderer.py
src/app/constants/: __init__.py  headers.py  urls.py
src/app/stat_data/: __init__.py  understat.py
src/app/utils/: utils.py
src/app/visual_templates/: README.md  __init__.py  registry.py
src/prem_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/test/: test.ipynb
tests/: test_cli.py  test_question_answering.py  test_utils.py  test_visualization_renderer.py
